文字サイズ変更

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 							<div data-lightbox="gallery-item" class="slider-book-img" data-animate="fadeInUp"><img src="demos/writer/images/hero/book-deni2.jpg" alt="latest book image"></div>
 
 							<div class="emphasis-title bottommargin-sm">
-								<h1 class="400" data-animate="fadeInUp" data-delay="600"  ><span><em>加藤かおり</em></span><br>最新訳書</h1>
+								<h1 class="400" data-animate="fadeInUp" data-delay="600" style="font-size: 26px;"><span><em>加藤かおり</em></span><br>最新訳書</h1>
 							</div>
-							<a data-animate="fadeIn" class="button button-large button-border button-white button-light button-rounded capitalize notopmargin" href="https://www.amazon.co.jp/%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB%E2%80%95%E2%80%95%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2%E8%87%AA%E4%BC%9D-%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2/dp/4751529358/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&keywords=%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB&qid=1565922205&s=books&sr=1-1"><span>Get it Now</span></a><br class="d-block d-sm-none">
+							<a data-animate="fadeIn" class="button button-large button-border button-white button-light button-rounded capitalize notopmargin" href="https://www.amazon.co.jp/%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB%E2%80%95%E2%80%95%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2%E8%87%AA%E4%BC%9D-%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2/dp/4751529358/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&keywords=%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB&qid=1565922205&s=books&sr=1-1" target="_new"><span>Get it Now</span></a><br class="d-block d-sm-none">
 
 						</div>
 					</div>
@@ -128,7 +128,7 @@
 								<img src="demos/writer/images/section/2.png" alt="Book Mockup" style="margin-top: 10px; max-width: 100%;">
 							</div>
 							<div class="col-lg-6 offset-lg-1">
-								<h3 class="color t400" style="font-size: 36px;">加藤かおり<br>略歴</h3>
+								<h3 class="color t400" style="font-size: 26px;">加藤かおり<br>略歴</h3>
 								<p class="dark lead">
 									<span class="dropcap color font-secondary">K</span>1966年  山形県山形市生まれ<br>国際基督教大学教養学部社会科学科卒業<br>2000年よりフリーランスの仏日翻訳者
 								</p>
@@ -150,7 +150,7 @@
 							<div class="portfolio-item mb-3 mb-sm-0">
 								<div class="book-wrap">
 									<div class="book-card">
-										<a href="https://www.amazon.co.jp/%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB%E2%80%95%E2%80%95%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2%E8%87%AA%E4%BC%9D-%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2/dp/4751529358/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&keywords=%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB&qid=1565922205&s=books&sr=1-1" target="_blank" class="item-quick-view book-image"><img src="demos/writer/images/books/1.jpg" alt="すべては救済のために"></a>
+										<a href="https://www.amazon.co.jp/%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB%E2%80%95%E2%80%95%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2%E8%87%AA%E4%BC%9D-%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2/dp/4751529358/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&keywords=%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB&qid=1565922205&s=books&sr=1-1" target="_new" class="item-quick-view book-image"><img src="demos/writer/images/books/1.jpg" alt="すべては救済のために"></a>
 
 									</div>
 								</div>
@@ -278,7 +278,7 @@
 
 						<div class="heading-block nobottomborder">
 							<i class="icon-book3 i-plain i-large divcenter center"></i>
-								<h3 class="nott t400 ls0" style="font-size: 36px;">日仏翻訳文学賞</h3>
+								<h3 class="nott t400 ls0" style="font-size: 24px;">受賞歴</h3>
 						</div>
 
 					</div>
