--- a/index.html
+++ b/index.html
@@ -291,13 +291,10 @@
 										<img src="demos/writer/images/books/3.jpg" alt="book">
 									</div>
 									<div class="testi-content">
-										<blockquote cite="https://www.sankei.com/life/news/190608/lif1906080025-n1.html">日本とフランスの優れた翻訳作品に贈られる第２４回日仏翻訳文学賞（小西国際交流財団主催）が、フリー翻訳者、加藤かおりさん（５２）訳の『ちいさな国で』（ガエル・ファイユ著、早川書房）に決まり、３日に東京都港区の駐日フランス大使公邸で授賞式が行われた。<br>
+										<p>第24回日仏翻訳文学賞（小西国際交流財団）</p>
+										<p>受賞作  ガエル・ファイユ著『ちいさな国で』（2017年、早川書房)</p>
+										<p><a href="http://konishi-zaidan.org/" target="_blank">小西財団のホームページ</a></p>
 
-										受賞作はアフリカのルワンダやブルンジでの民族対立の悲惨な現実を少年たちの視線で写し出す。ラッパーとしても活躍する著者の歯切れの良い文章を、やわらかな日本語へ置き換えた訳業が高く評価された。<br>
-
-										受賞スピーチで「翻訳はあくまで原作あってのもの」と控えめに喜びを語った加藤さん。「『究極の精読』といわれる翻訳作業を続け、一冊の本を訳し切ったときには世界や人間に向けるまなざしが変わり、自分の人生が豊かになったという確かな実感を抱くことがある。今回の名誉ある賞を励みに、そうした読書の醍醐味（だいごみ）を伝える翻訳の仕事を続けたい」と抱負を述べた。<br>
-												--<cite>産経新聞（2019/6/8)</cite>
-											</blockquote>
 
 									</div>
 								</div>
