powered by canvasを追加

--- a/index.html
+++ b/index.html
@@ -368,7 +368,9 @@
 
 					<div class="col_half" style="z-index: 3">
 						Copyrights &copy; 2019 All Rights Reserved by Chikakoweb.com
+						<p>powered by Canvas</p>
 					</div>
+
 
 				</div>
 
