略歴画像まわりをぼかす　略歴の文字色white

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 							</div>
 							<div class="col-lg-6 offset-lg-1">
 								<h3 class="color t400" style="font-size: 26px;">加藤かおり<br>略歴</h3>
-								<p class="dark lead">
+								<p class="dark lead" style="color:#fff;">
 									<span class="dropcap color font-secondary">K</span>1966年  山形県山形市生まれ<br>国際基督教大学教養学部社会科学科卒業<br>2000年よりフリーランスの仏日翻訳者
 								</p>
 							</div>
