--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<div class="container dark clearfix">
 					<div class="row clearfix">
 
-						<div class="col-lg-4 offset-lg-1 col-md-6" data-lightbox="gallery" style="background-color: rgba(0, 0, 0, 0.7); padding :10px;">
+						<div class="col-lg-4 offset-lg-1 col-md-6" data-lightbox="gallery" style="background-color: rgba(0, 0, 0, 0.7); padding :20px;">
 							<div data-lightbox="gallery-item" class="slider-book-img" data-animate="fadeInUp"><img src="demos/writer/images/hero/book-deni2.jpg" alt="latest book image"></div>
 
 							<div class="emphasis-title bottommargin-sm">
@@ -324,7 +324,7 @@
 							<div class="widget clearfix">
 								<div class="row clearfix">
 									<div class="col-lg-8 clearfix" style="color: #888;">
-										<img src="demos/writer/images/logo.png" alt="Logo"  class="bottommargin-sm">
+										<img src="demos/writer/images/logo.png" alt="Logo" style="display: block;" class="bottommargin-sm">
 </div></div>
 
 										<a href="#" class="social-icon si-small si-borderless si-colored si-rounded si-facebook">
@@ -367,8 +367,7 @@
 				<div class="container clearfix">
 
 					<div class="col_half" style="z-index: 3">
-						Copyrights &copy; 2019 All Rights Reserved by Chikakoweb.com
-						<p>powered by Canvas</p>
+						<p>Copyrights &copy; 2019 All Rights Reserved by Chikakoweb.com<br>Powered by Canvas</p>
 					</div>
 
 
