--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="author" content="SemiColonWeb" />
+	<meta name="author" content="" />
+	<meta name="robots" content="noindex,nofollow">
 
 	<!-- Stylesheets
 	============================================= -->
