翻訳家→翻訳者

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>加藤かおり：仏日翻訳家</title>
+	<title>加藤かおり：仏日翻訳者</title>
 
 </head>
 
