--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="ja">
+<html dir="ltr" lang="ja" prefix="og: http://ogp.me/ns#">
 <head>
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="author" content="" />
+
+	<meta property="og:title" content="加藤かおり：仏日翻訳者">
+	<meta property="og:type" content="website">
+	<meta property="og:description" content="加藤かおり：仏日翻訳者 訳書紹介">
+	<meta property="og:url" content="https://cnagama2.github.io/UgcJnga37ibtbvph/">
+	<meta property="og:site_name" content="加藤かおり：仏日翻訳者">
+	<meta property="og:image" content="https://chikakoweb.com/my_profile/assets/images/kaori1.png">
 	<meta name="robots" content="noindex,nofollow">
+
+	<meta name="twitter:card" content="summary_large_image">
 
 	<!-- Stylesheets
 	============================================= -->
